# evocli

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/code_intel/: Cargo.toml
crates/code_intel/src/: file_watcher.rs  lib.rs  lsp_client.rs  lsp_manager.rs  ts_indexer.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: config.rs  errors.rs  event_bus.rs  fs_tools.rs  git.rs  init.rs  job_queue.rs  keystore.rs  lib.rs  logging.rs  main.rs  python_manager.rs  security.rs  tool_dispatch.rs  web_tools.rs
crates/host/src/commands/: config_cmd.rs  constraint_cmd.rs  debug_cmd.rs  doctor_cmd.rs  evolve_cmd.rs  git_cmd.rs  index_cmd.rs  jobs_cmd.rs  lsp_cmd.rs  mcp_cmd.rs  mod.rs  session_cmd.rs  skill_cmd.rs  snapshot_cmd.rs  stats_cmd.rs  tools_cmd.rs
crates/knowledge_graph/: Cargo.toml
crates/knowledge_graph/src/: bm25_index.rs  context.rs  graph_analysis.rs  hybrid_search.rs  lib.rs  wiki.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/mem_router/: Cargo.toml
crates/mem_router/src/: classifier.rs  embedder.rs  labeler.rs  lib.rs  trainer.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/soul_bridge/: Cargo.toml
crates/soul_bridge/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event_handler.rs  lib.rs  ui.rs
docs/: AGENTS.md.example  CONFIGURATION.md  TOOLS_REFERENCE.md  config.toml.example  global_rules.md.example
evocli-soul/: pyproject.toml  test_memory_rpc.py
evocli-soul/evocli_soul/: __init__.py  agent.py  agent_context.py  agent_executor.py  agent_litellm.py  agent_tool_defs.py  agent_tool_selector.py  agent_tools_code.py  auto_commit.py  code_chunks.py  code_intel_tools.py  code_search.py  config_defaults.py  context_engine.py  context_mentions.py  context_pruner.py  context_summary.py  default_prompts.py  diff_utils.py  edit_engine.py  embedder.py  evolution_engine.py  host_bridge.py  intent_profile.py  llm_client.py  local_classifier.py  main.py  mem_router_labeler.py  memory_client.py  memory_distill.py  memory_enhance.py  memory_router.py  model_context.py  multi_agent.py  orchestrator.py  prompt_manager.py  protocols.py  repo_map.py  router.py  rpc.py  (+13 more)
evocli-soul/evocli_soul/agents/: coder.md  debugger.md  definitions.py  planner.md  researcher.md  reviewer.md
evocli-soul/evocli_soul/builtin_skills/: brainstorming.md  evocli-memory.md  evocli-skills.md  explain_code.toml  finishing-a-development-branch.md  fix_compile_error.toml  fix_rust_unwrap.toml  generate_tests.toml  requesting-code-review.md  review_pr_diff.toml  subagent-driven-development.md  systematic-debugging.md  test-driven-development.md  using-git-worktrees.md  writing-plans.md
evocli-soul/evocli_soul/evolution/: __init__.py  circuit_breaker.py  decay_detector.py  failure_miner.py  knowledge_classifier.py  pattern_detector.py  scheduler.py  skill_draft.py
evocli-soul/evocli_soul/handlers/: __init__.py  agent.py  agent_loop.py  code_analysis.py  diff.py  edit.py  knowledge.py  mcp_bridge.py  memory.py  metrics.py  session.py  session_ext.py  skill.py  slash_commands.py  system.py  tracer.py  watch.py  web.py
evocli-soul/evocli_soul/prompts/: compact_system.md  loop_messages.toml  model_claude.md  model_deepseek.md  model_gemini.md  model_gpt.md  project_constraints_template.md  read_only_extension.md  system_core.md  system_diff_format.md  system_git.md  system_mandates.md  system_memory.md  system_tool_rules.md  system_uncertainty.md  system_workflow.md
evocli-soul/tests/: PLAN_code_chunks_e2e.md  smoke_test.py  test_code_chunks_e2e.py  test_core_reliability.py  test_feature_parity.py
evocli-soul/tests/integration/: test_agent_e2e.py  test_autonomous_loop_e2e.py  test_context_and_repo.py  test_full_chain_e2e.py  test_handler_chain.py  test_knowledge_handlers.py  test_multi_agent.py
evocli-soul/tests/unit/: test_auto_commit.py  test_edit_engine.py  test_missing_modules.py  test_protocols.py  test_trace.py
scripts/: build_dist.ps1  build_release.ps1  download_models.py  install.ps1  install.sh  preflight.py  run_tracer.ps1  setup_dist.ps1  setup_env.py  test_pyapp.ps1  uninstall.ps1  uninstall.sh
skills/evocli-mcp-integration/: SKILL.md
skills/evocli-memory/: SKILL.md
skills/evocli-skills-workflow/: SKILL.md
skills/using-evocli/: SKILL.md
